@@ -1,5 +1,6 @@
 package io.breland.bbagent.server.website;
 
+import io.breland.bbagent.generated.model.WebsiteAccountIdentity;
 import io.breland.bbagent.generated.model.WebsiteAccountLink;
 import io.breland.bbagent.generated.model.WebsiteAccountProfile;
 import io.breland.bbagent.generated.model.WebsiteAccountRedeemLinkResponse;
@@ -9,17 +10,15 @@ import io.breland.bbagent.generated.model.WebsiteIntegrationSummary;
 import io.breland.bbagent.generated.model.WebsiteLinkedAccountsResponse;
 import io.breland.bbagent.generated.model.WebsiteLinkedIntegrationAccount;
 import io.breland.bbagent.generated.model.WebsiteModelAccessSummary;
-import io.breland.bbagent.server.agent.AccountIdentityAliasService;
-import io.breland.bbagent.server.agent.AgentAccountIdentity;
+import io.breland.bbagent.server.agent.AgentAccountResolver;
 import io.breland.bbagent.server.agent.IncomingMessage;
 import io.breland.bbagent.server.agent.model_picker.ModelAccessService;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountEntity;
+import io.breland.bbagent.server.agent.persistence.account.AgentAccountEntity;
+import io.breland.bbagent.server.agent.persistence.account.AgentAccountIdentityEntity;
 import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountLinkTokenEntity;
 import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountLinkTokenRepository;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountRepository;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountSenderLinkEntity;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountSenderLinkRepository;
 import io.breland.bbagent.server.agent.tools.coder.CoderMcpClient;
+import io.breland.bbagent.server.agent.tools.gcal.AccountKeyParts;
 import io.breland.bbagent.server.agent.tools.gcal.GcalClient;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
@@ -32,11 +31,9 @@ import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.Base64;
 import java.util.HexFormat;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.UUID;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
@@ -54,64 +51,44 @@ public class WebsiteAccountService {
   private static final int LINK_TOKEN_BYTES = 32;
   private static final String TOKEN_HASH_ALGORITHM = "SHA-256";
 
-  private final WebsiteAccountRepository accountRepository;
+  private final AgentAccountResolver accountResolver;
   private final WebsiteAccountLinkTokenRepository tokenRepository;
-  private final WebsiteAccountSenderLinkRepository linkRepository;
   private final GcalClient gcalClient;
   private final CoderMcpClient coderMcpClient;
   private final ModelAccessService modelAccessService;
-  private final AccountIdentityAliasService accountIdentityAliasService;
   private final String websiteBaseUrl;
   private final Duration linkTokenTtl;
   private final SecureRandom secureRandom = new SecureRandom();
 
   public WebsiteAccountService(
-      WebsiteAccountRepository accountRepository,
+      AgentAccountResolver accountResolver,
       WebsiteAccountLinkTokenRepository tokenRepository,
-      WebsiteAccountSenderLinkRepository linkRepository,
       GcalClient gcalClient,
-      CoderMcpClient coderMcpClient,
+      @Nullable CoderMcpClient coderMcpClient,
       ModelAccessService modelAccessService,
-      @Nullable AccountIdentityAliasService accountIdentityAliasService,
       @Value("${website.base-url:" + DEFAULT_WEBSITE_BASE_URL + "}") String websiteBaseUrl,
       @Value("${website.account-link-token-ttl-minutes:30}") long linkTokenTtlMinutes) {
-    this.accountRepository = accountRepository;
+    this.accountResolver = accountResolver;
     this.tokenRepository = tokenRepository;
-    this.linkRepository = linkRepository;
     this.gcalClient = gcalClient;
     this.coderMcpClient = coderMcpClient;
     this.modelAccessService = modelAccessService;
-    this.accountIdentityAliasService = accountIdentityAliasService;
     this.websiteBaseUrl = stripTrailingSlash(websiteBaseUrl);
     this.linkTokenTtl = Duration.ofMinutes(linkTokenTtlMinutes);
   }
 
   @Transactional
   public WebsiteAccountResponse getAccount(Jwt jwt) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    return new WebsiteAccountResponse()
-        .account(toProfile(account))
-        .links(
-            linkRepository
-                .findAllByAccountSubjectOrderByCreatedAtDesc(account.getKeycloakSubject())
-                .stream()
-                .map(this::toLink)
-                .toList());
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
+    return new WebsiteAccountResponse().account(toProfile(account)).links(List.of(toLink(account)));
   }
 
   @Transactional
   public WebsiteLinkedAccountsResponse listLinkedAccounts(Jwt jwt) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    List<WebsiteIntegrationSummary> integrations =
-        linkRepository
-            .findAllByAccountSubjectOrderByCreatedAtDesc(account.getKeycloakSubject())
-            .stream()
-            .peek(link -> recordAliases(account, link))
-            .map(this::toIntegration)
-            .toList();
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
     return new WebsiteLinkedAccountsResponse()
         .account(toProfile(account))
-        .integrations(integrations);
+        .integrations(List.of(toIntegration(account)));
   }
 
   @Transactional
@@ -119,25 +96,19 @@ public class WebsiteAccountService {
     if (message == null) {
       throw new IllegalArgumentException("missing message context");
     }
-    AgentAccountIdentity identity = AgentAccountIdentity.from(message);
-    if (identity.accountBase().isBlank()) {
-      throw new IllegalArgumentException("missing iMessage identity");
-    }
-    recordAliases(message);
-    String accountBase = preferredAccountBaseForWrite(identity.accountBase());
-    String coderAccountBase = preferredAccountBaseForWrite(identity.coderAccountBase());
-    String gcalAccountBase = preferredAccountBaseForWrite(identity.gcalAccountBase());
-
+    AgentAccountEntity account =
+        accountResolver
+            .resolveOrCreate(message)
+            .map(AgentAccountResolver.ResolvedAccount::account)
+            .orElseThrow(() -> new IllegalArgumentException("missing iMessage identity"));
     String token = newToken();
     String tokenHash = hashToken(token);
     Instant now = Instant.now();
     Instant expiresAt = now.plus(linkTokenTtl);
-    WebsiteAccountLinkTokenEntity entity =
+    tokenRepository.save(
         new WebsiteAccountLinkTokenEntity(
             tokenHash,
-            accountBase,
-            coderAccountBase,
-            gcalAccountBase,
+            account.getAccountId(),
             message.chatGuid(),
             message.sender(),
             message.service(),
@@ -145,10 +116,8 @@ public class WebsiteAccountService {
             message.messageGuid(),
             expiresAt,
             now,
-            now);
-    tokenRepository.save(entity);
-    String url = buildLinkUrl(token);
-    return new CreatedLinkToken(url, expiresAt, accountBase);
+            now));
+    return new CreatedLinkToken(buildLinkUrl(token), expiresAt, account.getAccountId());
   }
 
   @Transactional(readOnly = true)
@@ -156,7 +125,21 @@ public class WebsiteAccountService {
     if (message == null) {
       return SenderLinkStatus.empty();
     }
-    return getLinkStatus(message.sender(), message.chatGuid());
+    return accountResolver
+        .resolve(message)
+        .map(resolved -> toStatus(resolved.account()))
+        .orElseGet(SenderLinkStatus::empty);
+  }
+
+  @Transactional
+  public SenderLinkStatus getLinkStatus(String sender, String chatGuid) {
+    if (StringUtils.isBlank(sender)) {
+      return SenderLinkStatus.empty();
+    }
+    return accountResolver
+        .resolveOrCreate(IncomingMessage.TRANSPORT_BLUEBUBBLES, sender)
+        .map(resolved -> toStatus(resolved.account()))
+        .orElseGet(SenderLinkStatus::empty);
   }
 
   @Transactional(readOnly = true)
@@ -164,137 +147,52 @@ public class WebsiteAccountService {
     if (message == null) {
       return Optional.empty();
     }
-    AgentAccountIdentity identity = AgentAccountIdentity.from(message);
-    if (identity.accountBase().isBlank()) {
-      return Optional.empty();
-    }
-    List<String> accountBases = accountBaseCandidates(identity.accountBase());
-    List<String> coderAccountBases = accountBaseCandidates(identity.coderAccountBase());
-    List<String> gcalAccountBases = accountBaseCandidates(identity.gcalAccountBase());
-    Optional<WebsiteAccountSenderLinkEntity> exactLink =
-        linkRepository
-            .findAllByAccountBaseInAndCoderAccountBaseInAndGcalAccountBaseInOrderByCreatedAtDesc(
-                accountBases, coderAccountBases, gcalAccountBases)
-            .stream()
-            .findFirst();
-    Optional<WebsiteAccountSenderLinkEntity> link =
-        exactLink.or(
-            () ->
-                linkRepository.findAllByAccountBaseInOrderByCreatedAtDesc(accountBases).stream()
-                    .findFirst());
-    return link.flatMap(linkEntity -> accountRepository.findById(linkEntity.getAccountSubject()))
-        .map(WebsiteAccountEntity::getEmail)
+    return accountResolver
+        .resolve(message)
+        .map(AgentAccountResolver.ResolvedAccount::account)
+        .map(AgentAccountEntity::getWebsiteEmail)
         .map(String::trim)
-        .filter(email -> !email.isBlank());
-  }
-
-  @Transactional(readOnly = true)
-  public SenderLinkStatus getLinkStatus(String sender, String chatGuid) {
-    AgentAccountIdentity identity = AgentAccountIdentity.from(sender, chatGuid);
-    if (identity.accountBase().isBlank()) {
-      return SenderLinkStatus.empty();
-    }
-    List<String> accountBases = accountBaseCandidates(identity.accountBase());
-    List<String> coderAccountBases = accountBaseCandidates(identity.coderAccountBase());
-    List<String> gcalAccountBases = accountBaseCandidates(identity.gcalAccountBase());
-    List<WebsiteAccountSenderLinkEntity> accountLinks =
-        linkRepository.findAllByAccountBaseInOrderByCreatedAtDesc(accountBases);
-    List<WebsiteAccountSenderLinkEntity> exactLinks =
-        linkRepository
-            .findAllByAccountBaseInAndCoderAccountBaseInAndGcalAccountBaseInOrderByCreatedAtDesc(
-                accountBases, coderAccountBases, gcalAccountBases);
-    Instant latestLinkedAt =
-        exactLinks.stream()
-            .findFirst()
-            .or(() -> accountLinks.stream().findFirst())
-            .map(WebsiteAccountSenderLinkEntity::getCreatedAt)
-            .orElse(null);
-    return new SenderLinkStatus(
-        accountBases.getFirst(),
-        coderAccountBases.getFirst(),
-        gcalAccountBases.getFirst(),
-        !accountLinks.isEmpty(),
-        !exactLinks.isEmpty(),
-        accountLinks.size(),
-        exactLinks.size(),
-        modelAccessService.toWebsiteSummary(accountBases.getFirst()),
-        latestLinkedAt);
+        .filter(StringUtils::isNotBlank);
   }
 
   @Transactional
   public WebsiteAccountRedeemLinkResponse redeemLink(Jwt jwt, String token) {
-    if (token == null || token.isBlank()) {
+    if (StringUtils.isBlank(token)) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing link token");
     }
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    String tokenHash = hashToken(token);
+    AgentAccountEntity websiteAccount = accountResolver.upsertWebsiteAccount(jwt);
     WebsiteAccountLinkTokenEntity tokenEntity =
         tokenRepository
-            .findById(tokenHash)
+            .findById(hashToken(token))
             .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Link not found"));
     Instant now = Instant.now();
-    validateToken(tokenEntity, account, now);
+    validateToken(tokenEntity, websiteAccount, now);
+    boolean alreadyLinked = tokenEntity.getRedeemedAt() != null;
+    AgentAccountEntity linkedAccount =
+        accountResolver.linkWebsiteAccount(tokenEntity.getAccountId(), jwt);
+    markTokenRedeemed(tokenEntity, linkedAccount, now);
 
-    boolean tokenAlreadyRedeemed = tokenEntity.getRedeemedAccountSubject() != null;
-    Optional<WebsiteAccountSenderLinkEntity> existingLink =
-        linkRepository
-            .findAllByAccountSubjectAndCoderAccountBaseInAndGcalAccountBaseInOrderByCreatedAtDesc(
-                account.getKeycloakSubject(),
-                accountBaseCandidates(tokenEntity.getCoderAccountBase()),
-                accountBaseCandidates(tokenEntity.getGcalAccountBase()))
-            .stream()
-            .findFirst();
-    if (tokenAlreadyRedeemed && existingLink.isEmpty()) {
-      throw new ResponseStatusException(HttpStatus.CONFLICT, "Link token already consumed");
-    }
-    boolean alreadyLinked = existingLink.isPresent();
-    WebsiteAccountSenderLinkEntity link =
-        existingLink.orElseGet(() -> newSenderLink(account, tokenEntity, now));
-    link.setUpdatedAt(now);
-    link = linkRepository.save(link);
-    recordAliases(account, tokenEntity);
-
-    markTokenRedeemed(tokenEntity, account, now);
-
-    WebsiteAccountRedeemLinkResponse response = new WebsiteAccountRedeemLinkResponse();
-    response.setStatus(alreadyLinked ? "already_linked" : "linked");
-    response.setLink(toLink(link));
-    return response;
-  }
-
-  @Transactional
-  public boolean deleteLink(Jwt jwt, String linkId) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    WebsiteAccountSenderLinkEntity link =
-        linkRepository
-            .findByLinkIdAndAccountSubject(linkId, account.getKeycloakSubject())
-            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Link not found"));
-    linkRepository.delete(link);
-    return true;
+    return new WebsiteAccountRedeemLinkResponse()
+        .status(alreadyLinked ? "already_linked" : "linked")
+        .link(toLink(linkedAccount));
   }
 
   @Transactional
   public boolean deleteLinkedAccount(Jwt jwt, String type, String accountKey) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
     if (StringUtils.isBlank(type) || StringUtils.isBlank(accountKey)) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing linked account");
     }
-    WebsiteLinkedIntegrationAccount linkedAccount =
-        linkRepository
-            .findAllByAccountSubjectOrderByCreatedAtDesc(account.getKeycloakSubject())
-            .stream()
-            .flatMap(link -> linkedAccounts(link).stream())
-            .filter(linked -> accountKey.equals(linked.getAccountKey()))
-            .filter(linked -> type.equalsIgnoreCase(linked.getType().getValue()))
-            .findFirst()
-            .orElseThrow(
-                () ->
-                    new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Linked integration account not found"));
     boolean deleted =
-        switch (linkedAccount.getType()) {
-          case GCAL -> gcalClient.revokeAccount(accountKey);
-          case CODER -> coderMcpClient != null && coderMcpClient.revoke(accountKey);
+        switch (type.toLowerCase(Locale.ROOT)) {
+          case "gcal" ->
+              account.getAccountId().equals(AccountKeyParts.parse(accountKey).accountId())
+                  && gcalClient.revokeAccount(accountKey);
+          case "coder" ->
+              account.getAccountId().equals(accountKey)
+                  && coderMcpClient != null
+                  && coderMcpClient.revoke(account.getAccountId());
+          default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Unknown type");
         };
     if (!deleted) {
       throw new ResponseStatusException(
@@ -303,130 +201,95 @@ public class WebsiteAccountService {
     return true;
   }
 
-  private WebsiteAccountEntity upsertAccount(Jwt jwt) {
-    if (jwt == null || jwt.getSubject() == null || jwt.getSubject().isBlank()) {
-      throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Missing account subject");
-    }
-    Instant now = Instant.now();
-    WebsiteAccountEntity account =
-        accountRepository
-            .findById(jwt.getSubject())
-            .orElseGet(
-                () -> new WebsiteAccountEntity(jwt.getSubject(), null, null, null, now, now));
-    account.setEmail(jwt.getClaimAsString("email"));
-    account.setPreferredUsername(jwt.getClaimAsString("preferred_username"));
-    account.setDisplayName(resolveDisplayName(jwt));
-    account.setUpdatedAt(now);
-    return accountRepository.save(account);
+  private SenderLinkStatus toStatus(AgentAccountEntity account) {
+    boolean linked = StringUtils.isNotBlank(account.getWebsiteSubject());
+    return new SenderLinkStatus(
+        account.getAccountId(),
+        linked,
+        linked,
+        1,
+        linked ? 1 : 0,
+        modelAccessService.toWebsiteSummary(account.getAccountId()),
+        linked ? account.getUpdatedAt() : null);
   }
 
-  private WebsiteAccountSenderLinkEntity newSenderLink(
-      WebsiteAccountEntity account, WebsiteAccountLinkTokenEntity token, Instant now) {
-    return new WebsiteAccountSenderLinkEntity(
-        UUID.randomUUID().toString(),
-        account.getKeycloakSubject(),
-        token.getAccountBase(),
-        token.getCoderAccountBase(),
-        token.getGcalAccountBase(),
-        token.getChatGuid(),
-        token.getSender(),
-        token.getService(),
-        token.isGroup(),
-        token.getSourceMessageGuid(),
-        token.getTokenHash(),
-        now,
-        now);
-  }
-
-  private WebsiteIntegrationSummary toIntegration(WebsiteAccountSenderLinkEntity link) {
+  private WebsiteIntegrationSummary toIntegration(AgentAccountEntity account) {
     List<WebsiteCalendarAccountSummary> gcalAccounts =
-        gcalClient.listLinkedAccountsFor(link.getGcalAccountBase()).stream()
+        gcalClient.listLinkedAccountsFor(account.getAccountId()).stream()
             .map(
-                account ->
+                linked ->
                     new WebsiteCalendarAccountSummary()
-                        .accountId(account.accountId())
-                        .accountKey(account.accountKey())
-                        .email(account.accountId()))
+                        .accountId(linked.googleAccountId())
+                        .accountKey(linked.accountKey())
+                        .email(linked.googleAccountId()))
             .toList();
     return new WebsiteIntegrationSummary()
-        .link(toLink(link))
-        .coderLinked(coderMcpClient != null && coderMcpClient.isLinked(link.getCoderAccountBase()))
+        .link(toLink(account))
+        .coderLinked(coderMcpClient != null && coderMcpClient.isLinked(account.getAccountId()))
         .gcalAccounts(gcalAccounts)
-        .linkedAccounts(linkedAccounts(link))
-        .modelAccess(modelAccessService.toWebsiteSummary(link.getAccountBase()));
+        .linkedAccounts(linkedAccounts(account))
+        .modelAccess(modelAccessService.toWebsiteSummary(account.getAccountId()));
   }
 
-  private List<WebsiteLinkedIntegrationAccount> linkedAccounts(
-      WebsiteAccountSenderLinkEntity link) {
+  private List<WebsiteLinkedIntegrationAccount> linkedAccounts(AgentAccountEntity account) {
     Stream<WebsiteLinkedIntegrationAccount> gcalAccounts =
-        gcalClient.listLinkedAccountsFor(link.getGcalAccountBase()).stream()
+        gcalClient.listLinkedAccountsFor(account.getAccountId()).stream()
             .map(
-                account ->
+                linked ->
                     new WebsiteLinkedIntegrationAccount()
                         .type(WebsiteLinkedIntegrationAccount.TypeEnum.GCAL)
-                        .accountKey(account.accountKey())
-                        .email(account.accountId())
+                        .accountKey(linked.accountKey())
+                        .email(linked.googleAccountId())
                         .label("Google Calendar")
                         .unlinkable(true));
     Stream<WebsiteLinkedIntegrationAccount> coderAccounts =
         coderMcpClient == null
             ? Stream.empty()
             : coderMcpClient
-                .findLinkedAccount(link.getCoderAccountBase())
+                .findLinkedAccount(account.getAccountId())
                 .map(
-                    account ->
+                    linked ->
                         new WebsiteLinkedIntegrationAccount()
                             .type(WebsiteLinkedIntegrationAccount.TypeEnum.CODER)
-                            .accountKey(account.accountBase())
-                            .email(account.email())
-                            .label(
-                                account.label() == null || account.label().isBlank()
-                                    ? "Coder"
-                                    : account.label())
+                            .accountKey(linked.accountId())
+                            .email(linked.email())
+                            .label(StringUtils.defaultIfBlank(linked.label(), "Coder"))
                             .unlinkable(true))
                 .stream();
     return Stream.concat(gcalAccounts, coderAccounts).toList();
   }
 
-  private WebsiteAccountProfile toProfile(WebsiteAccountEntity account) {
+  private WebsiteAccountProfile toProfile(AgentAccountEntity account) {
     return new WebsiteAccountProfile()
-        .subject(account.getKeycloakSubject())
-        .email(account.getEmail())
-        .preferredUsername(account.getPreferredUsername())
-        .displayName(account.getDisplayName())
+        .subject(account.getWebsiteSubject())
+        .accountId(account.getAccountId())
+        .email(account.getWebsiteEmail())
+        .preferredUsername(account.getWebsitePreferredUsername())
+        .displayName(account.getWebsiteDisplayName())
         .createdAt(offset(account.getCreatedAt()))
         .updatedAt(offset(account.getUpdatedAt()));
   }
 
-  private WebsiteAccountLink toLink(WebsiteAccountSenderLinkEntity link) {
+  private WebsiteAccountLink toLink(AgentAccountEntity account) {
     return new WebsiteAccountLink()
-        .linkId(link.getLinkId())
-        .accountBase(link.getAccountBase())
-        .coderAccountBase(link.getCoderAccountBase())
-        .gcalAccountBase(link.getGcalAccountBase())
-        .chatGuid(link.getChatGuid())
-        .sender(link.getSender())
-        .service(link.getService())
-        .isGroup(link.isGroup())
-        .createdAt(offset(link.getCreatedAt()));
+        .linkId(account.getAccountId())
+        .accountId(account.getAccountId())
+        .identities(
+            accountResolver.identitiesForAccount(account.getAccountId()).stream()
+                .map(this::toIdentity)
+                .toList())
+        .createdAt(offset(account.getCreatedAt()));
+  }
+
+  private WebsiteAccountIdentity toIdentity(AgentAccountIdentityEntity identity) {
+    return new WebsiteAccountIdentity()
+        .type(WebsiteAccountIdentity.TypeEnum.fromValue(identity.getIdentityType()))
+        .identifier(identity.getIdentifier())
+        .normalizedIdentifier(identity.getNormalizedIdentifier());
   }
 
   private OffsetDateTime offset(Instant instant) {
     return instant == null ? null : OffsetDateTime.ofInstant(instant, ZoneOffset.UTC);
-  }
-
-  private String resolveDisplayName(Jwt jwt) {
-    String name = jwt.getClaimAsString("name");
-    if (name != null && !name.isBlank()) {
-      return name;
-    }
-    String given = jwt.getClaimAsString("given_name");
-    String family = jwt.getClaimAsString("family_name");
-    String joined = ((given == null ? "" : given) + " " + (family == null ? "" : family)).trim();
-    if (!joined.isBlank()) {
-      return joined;
-    }
-    return jwt.getClaimAsString("preferred_username");
   }
 
   private String newToken() {
@@ -454,22 +317,22 @@ public class WebsiteAccountService {
   }
 
   private void validateToken(
-      WebsiteAccountLinkTokenEntity tokenEntity, WebsiteAccountEntity account, Instant now) {
+      WebsiteAccountLinkTokenEntity tokenEntity, AgentAccountEntity account, Instant now) {
     if (tokenEntity.getExpiresAt().isBefore(now)) {
       throw new ResponseStatusException(HttpStatus.GONE, "Link expired");
     }
-    if (tokenEntity.getRedeemedAccountSubject() != null
-        && !tokenEntity.getRedeemedAccountSubject().equals(account.getKeycloakSubject())) {
+    if (tokenEntity.getRedeemedAccountId() != null
+        && !tokenEntity.getRedeemedAccountId().equals(account.getAccountId())) {
       throw new ResponseStatusException(
           HttpStatus.CONFLICT, "Link already redeemed by another account");
     }
   }
 
   private void markTokenRedeemed(
-      WebsiteAccountLinkTokenEntity tokenEntity, WebsiteAccountEntity account, Instant now) {
+      WebsiteAccountLinkTokenEntity tokenEntity, AgentAccountEntity account, Instant now) {
     tokenEntity.setRedeemedAt(
         tokenEntity.getRedeemedAt() == null ? now : tokenEntity.getRedeemedAt());
-    tokenEntity.setRedeemedAccountSubject(account.getKeycloakSubject());
+    tokenEntity.setRedeemedAccountId(account.getAccountId());
     tokenEntity.setUpdatedAt(now);
     tokenRepository.save(tokenEntity);
   }
@@ -483,66 +346,10 @@ public class WebsiteAccountService {
     return base;
   }
 
-  private void recordAliases(IncomingMessage message) {
-    if (accountIdentityAliasService != null) {
-      accountIdentityAliasService.recordMessageAliases(message);
-    }
-  }
-
-  private void recordAliases(WebsiteAccountEntity account, WebsiteAccountLinkTokenEntity token) {
-    if (account == null || token == null || token.isGroup()) {
-      return;
-    }
-    recordLinkedAccountAliases(account, token.getAccountBase(), token.getSender());
-  }
-
-  private void recordAliases(WebsiteAccountEntity account, WebsiteAccountSenderLinkEntity link) {
-    if (account == null || link == null || link.isGroup()) {
-      return;
-    }
-    recordLinkedAccountAliases(account, link.getAccountBase(), link.getSender());
-  }
-
-  private void recordLinkedAccountAliases(
-      WebsiteAccountEntity account, String accountBase, String sender) {
-    if (accountIdentityAliasService == null || StringUtils.isBlank(accountBase)) {
-      return;
-    }
-    LinkedHashSet<String> aliases = new LinkedHashSet<>();
-    aliases.add(accountBase);
-    if (StringUtils.isNotBlank(sender)) {
-      aliases.add(sender);
-    }
-    if (StringUtils.isNotBlank(account.getEmail())) {
-      aliases.add(account.getEmail());
-    }
-    accountIdentityAliasService.recordAliases(
-        IncomingMessage.TRANSPORT_BLUEBUBBLES, aliases, accountBase);
-  }
-
-  private List<String> accountBaseCandidates(String accountBase) {
-    if (accountIdentityAliasService == null) {
-      return accountBase == null || accountBase.isBlank() ? List.of() : List.of(accountBase);
-    }
-    List<String> candidates = accountIdentityAliasService.accountBaseCandidates(accountBase);
-    return candidates.isEmpty() && accountBase != null && !accountBase.isBlank()
-        ? List.of(accountBase)
-        : candidates;
-  }
-
-  private String preferredAccountBaseForWrite(String accountBase) {
-    if (accountIdentityAliasService == null) {
-      return accountBase;
-    }
-    return accountIdentityAliasService.preferredAccountBaseForWrite(accountBase);
-  }
-
-  public record CreatedLinkToken(String url, Instant expiresAt, String accountBase) {}
+  public record CreatedLinkToken(String url, Instant expiresAt, String accountId) {}
 
   public record SenderLinkStatus(
-      String accountBase,
-      String coderAccountBase,
-      String gcalAccountBase,
+      String accountId,
       boolean linked,
       boolean exactChatLinked,
       int linkCount,
@@ -550,7 +357,7 @@ public class WebsiteAccountService {
       WebsiteModelAccessSummary modelAccess,
       Instant linkedAt) {
     public static SenderLinkStatus empty() {
-      return new SenderLinkStatus(null, null, null, false, false, 0, 0, null, null);
+      return new SenderLinkStatus(null, false, false, 0, 0, null, null);
     }
   }
 }
